hphp/hack/test/typecheck/tconst/tconst_cstr.php
<?hh // strict

class C {
  const type T as arraykey = mixed;
}
